# fips

./: .gitignore  .gitmodules  .travis.yml  .vimrc  404.html  CHANGELOG.md  LICENSE  PLANNING.md  README.md  book.min.5c73c46aca2a1bca1dcdff8126636a2cd180236600b29850c511f7cf52195c4a.css  book.min.a40af3dc8c0a4d2d9dd31b0865c32c72becf072fcbd75fa08f4d97e7a027e555.css  book.min.bff781db5420417a98b39d5c502a421476ceee7df3af700be24e8554146bfa51.css  build.html  buildconfigs.html  cmakeguide.html  codegen.html  crosscompiling.html  dirstruct.html  exports.html  fips  getstarted.html  gettingstarted.html  imports.html  index.html  index.xml  params.json  registry.yml  sitemap.xml  test-linux.sh  test.py  troubleshooting.html
_posts/: 2015-01-04-welcome-to-jekyll.markdown
cmake/: fips.cmake  fips_android.cmake  fips_deprecated.cmake  fips_generators.cmake  fips_osx.cmake  fips_platform.cmake  fips_pnacl.cmake  fips_private.cmake  fips_unittests.cmake  fips_uwp.cmake  fips_windows.cmake
cmake-toolchains/: android.toolchain.cmake  android.toolchain.orig  emscripten.toolchain.cmake  ios.toolchain.cmake  linux.cmake  osx.cmake  pnacl.toolchain.cmake  wasisdk.toolchain.cmake  windows-clang.cmake  windows.cmake
colorama/: ansitowin32.py
configs/: android-make-debug.yml  android-make-release.yml  android-ninja-debug.yml  android-ninja-release.yml  android-vscode-debug.yml  android-vscode-release.yml  androidmips-make-debug.yml  androidmips-make-release.yml  androidmips-ninja-debug.yml  androidx86-make-debug.yml  (+137 more)
templates/: .fips-gen.py  CMakeLists.txt  fips  fips-gen.py  fips.yml
(+167 files in other folders)
